package fr.upem.ijavabook.jinterpret;

/**
 * Enum with represents the result of a JUnit test
 * @author Steeve Sivanantham
 */
public enum JunitTestResult {
    SUCCESS,FAIL
}